--- a/obp-api/pom.xml
+++ b/obp-api/pom.xml
@@ -507,6 +507,13 @@
       <version>1.20.3</version>
       <scope>test</scope>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.testcontainers/kafka -->
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>kafka</artifactId>
+      <version>1.20.3</version>
+      <scope>test</scope>
+    </dependency>
 
   </dependencies>
 
