feature/Add Embedded Keycloak Testing

--- a/obp-commons/pom.xml
+++ b/obp-commons/pom.xml
@@ -111,6 +111,7 @@
                 <version>${scala.version}</version>
                 <configuration>
                     <skipTests>true</skipTests>
+                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                 </configuration>
             </plugin>
             <plugin>
