--- a/obp-api/pom.xml
+++ b/obp-api/pom.xml
@@ -515,6 +515,13 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>com.github.dasniko</groupId>
+      <artifactId>testcontainers-keycloak</artifactId>
+      <version>3.5.1</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
@@ -525,6 +532,7 @@
         <version>${scala.version}</version>
         <configuration>
           <skipTests>true</skipTests>
+          <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
         </configuration>
       </plugin>
       <plugin>
