--- a/pom.xml
+++ b/pom.xml
@@ -178,6 +178,7 @@
         <version>${scala.version}</version>
         <configuration>
           <skipTests>true</skipTests>
+          <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
         </configuration>
       </plugin>
         <plugin>
