--- a/obp-api/src/main/resources/props/test.default.props.template
+++ b/obp-api/src/main/resources/props/test.default.props.template
@@ -109,13 +109,15 @@ sandbox_data_import_secret=change_me
 allow_account_deletion=true
 
 # This needs to be a list all the types of transaction_requests that we have tests for. Else those tests will fail
-transactionRequests_supported_types=SANDBOX_TAN,COUNTERPARTY,SEPA,ACCOUNT_OTP,ACCOUNT,SIMPLE
+transactionRequests_supported_types=SANDBOX_TAN,COUNTERPARTY,SEPA,ACCOUNT_OTP,ACCOUNT,SIMPLE,AGENT_CASH_WITHDRAWAL,CARD
 ACCOUNT_OTP_INSTRUCTION_TRANSPORT=dummy
 SIMPLE_OTP_INSTRUCTION_TRANSPORT=dummy
 SEPA_OTP_INSTRUCTION_TRANSPORT=dummy
 FREE_FORM_OTP_INSTRUCTION_TRANSPORT=dummy
 COUNTERPARTY_OTP_INSTRUCTION_TRANSPORT=dummy
 SEPA_CREDIT_TRANSFERS_OTP_INSTRUCTION_TRANSPORT=dummy
+AGENT_CASH_WITHDRAWAL_OTP_INSTRUCTION_TRANSPORT=dummy
+CARD_OTP_INSTRUCTION_TRANSPORT=dummy
 
 
 # control the create and access to public views.
