--- a/obp-api/src/main/resources/props/sample.props.template
+++ b/obp-api/src/main/resources/props/sample.props.template
@@ -685,7 +685,11 @@ consumers_enabled_by_default=true
 # Autocomplete for login form has to be explicitly set
 autocomplete_at_login_form_enabled=false
 
-# Skip Auth User Email validation (defaults to false as of 29 June 2021)
+# Skip Auth User validation ( Email validation ) (defaults to false as of 29 June 2021)
+# By default, users have to confirm their email address for their user account to become active.
+# This involves this OBP-API sending an email to the newly registered email provided by the User and the User clicking on a link in that email
+# which results in a field being changed in the database.
+# To BYPASS this security features (for local development only), set this property to true to skip the email address validation.
 #authUser.skipEmailValidation=false
 
 # If using Kafka but want to get counterparties from OBP, set this to true
