--- a/obp-api/src/main/resources/props/sample.props.template
+++ b/obp-api/src/main/resources/props/sample.props.template
@@ -766,9 +766,9 @@ display_internal_errors=false
 # oauth2.jwk_set.url=http://localhost:8080/jwk.json,https://www.googleapis.com/oauth2/v3/certs
 # Keycloak Identity Provider Host
 # oauth2.keycloak.host=http://localhost:7070
-# oauth2.keycloak.well-known=http://localhost:7070/realms/master/.well-known/openid-configuration
+# oauth2.keycloak.well_known=http://localhost:7070/realms/master/.well-known/openid-configuration
 # Used to sync IAM of OBP-API and IAM of Keycloak
-# oauth2.keycloak.source-of-truth = false
+# oauth2.keycloak.source_of_truth = false
 # ------------------------------------------------------------------------------ OAuth 2 ------
 
 # -- PSU Authentication methods --------------------------------------------------------------
