--- a/obp-api/src/main/resources/props/sample.props.template
+++ b/obp-api/src/main/resources/props/sample.props.template
@@ -810,6 +810,8 @@ featured_apis=elasticSearchWarehouseV300
 # -- Redis cache -------------------------------------
 # cache.redis.url=127.0.0.1
 # cache.redis.port=6379
+# Default value is empty or omitted props
+# cache.redis.password =
 # ---------------------------------------------------------
 
 # -- New Style Endpoints -----------------------
