feature/Add props oauth2.keycloak.resource_access_name

--- a/obp-api/src/main/resources/props/sample.props.template
+++ b/obp-api/src/main/resources/props/sample.props.template
@@ -769,8 +769,8 @@ display_internal_errors=false
 # oauth2.keycloak.well_known=http://localhost:7070/realms/master/.well-known/openid-configuration
 # Used to sync IAM of OBP-API and IAM of Keycloak
 # oauth2.keycloak.source_of_truth = false
-# LIst of clients allowed to sync IAM of OBP-API and IAM of Keycloak
-# oauth2.keycloak.client_ids = SOME_CLIENT_ID_1, SOME_CLIENT_ID_2
+# LIst of resource access objects allowed to sync IAM of OBP-API and IAM of Keycloak
+# oauth2.keycloak.resource_access_name = SOME_NAME
 # ------------------------------------------------------------------------------ OAuth 2 ------
 
 # -- PSU Authentication methods --------------------------------------------------------------
