--- a/obp-api/src/main/resources/props/sample.props.template
+++ b/obp-api/src/main/resources/props/sample.props.template
@@ -720,7 +720,7 @@ autocomplete_at_login_form_enabled=false
 # In case isn't defined default value is false
 # allow_gateway_login=false
 # Define secret used to validate JWT token
-# jwt.token_secret=your-at-least-256-bit-secret-token
+# jwt_token_secret=your-at-least-256-bit-secret-token
 # Define comma separated list of allowed IP addresses
 # gateway.host=127.0.0.1
 
