--- a/obp-api/pom.xml
+++ b/obp-api/pom.xml
@@ -490,7 +490,12 @@
     <dependency>
       <groupId>com.squareup.okhttp3</groupId>
       <artifactId>okhttp</artifactId>
-      <version>4.9.1</version>
+      <version>4.12.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.squareup.okhttp3</groupId>
+      <artifactId>logging-interceptor</artifactId>
+      <version>4.12.0</version>
     </dependency>
 
     <!-- https://mvnrepository.com/artifact/com.rabbitmq/amqp-client -->
