--- a/obp-api/src/main/resources/props/sample.props.template
+++ b/obp-api/src/main/resources/props/sample.props.template
@@ -770,7 +770,7 @@ display_internal_errors=false
 # integrate_with_keycloak = false
 # Keycloak Identity Provider Host
 # oauth2.keycloak.host=http://localhost:7070
-# Keycloak access token to make a call to Admin APIs
+# Keycloak access token to make a call to Admin APIs (This props is likely to change)
 # keycloak.admin.access_token =
 # Keycloak Identity Provider Realm (Multi-Tenancy Support)
 # oauth2.keycloak.realm = master
